<resources>
    <string name="app_name">Libations</string>
    <string name="title_activity_user_home">Libations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_userName">User ID</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="action_signOut">Sign Out</string>
    <string name="nav_manage">Edit Profile</string>
    <string name="nav_location">Add Happy Hour</string>
    <string name="pic_userPicSelect">User Profile Picture</string>
    <string name="hint_bio">Enter description and bio here...</string>
    <string name="btn_saveButton">Save</string>
    <string name="add_loc_name">Location Name</string>
    <string name="add_times">When</string>
    <string name="add_description">Description</string>
    <string name="add_address">Address</string>
    <string name="btn_save_happy">Save</string>
    <string name="nav_signOut">Log Out</string>
    <string name="cDes_barPic">Cocktail Picture</string>
    <string name="btn_cancel_happy">Cancel</string>
    <string name="btn_cancel_profile">Cancel</string>
    <string name="btn_map">Directions</string>
    <string name="btn_goBack">Go Back</string>
</resources>
