<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/id_userName"
            android:hint="@string/hint_userName"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/id_userPicSelect"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="126dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/id_bio" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_userName" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hint_bio"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_saveButton"
            android:text="@string/btn_saveButton"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/id_bio" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <ImageView
            android:layout_width="169dp"
            android:layout_height="107dp" app:srcCompat="@drawable/blank_pic"
            android:id="@+id/id_userPicSelect" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="@string/pic_userPicSelect"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_cancel_profile" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/id_saveButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:text="@string/btn_cancel_profile"/>
</android.support.constraint.ConstraintLayout>